--- a/src/app/features/post/post-list/post-list.component.html
+++ b/src/app/features/post/post-list/post-list.component.html
@@ -1,5 +1,4 @@
 <div class="post-list-container">
-  <!-- Barra de búsqueda -->
   <div class="search-container">
     <div class="search-input-wrapper">
       <input 
@@ -27,7 +26,7 @@
       [routerLink]="['/post', post.id]">
       
       <div class="post-meta">
-        <time class="post-date-time">{{ post.date | date:'dd MM yyyy' }}</time>
+        <time class="post-date-time">{{ post.date | date:'dd-MM-yyyy' }}</time>
       </div>
       
       <h4 class="post-title">{{ post.title }}</h4>
