--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,9 @@
     -moz-osx-font-smoothing: grayscale;
     display: block;
     min-height: 100vh;
+    /* Prevenir scroll horizontal */
+    overflow-x: hidden;
+    max-width: 100vw;
   }
 
   h1,
@@ -254,14 +257,6 @@
     background-image: linear-gradient(-180deg,#f0f3f6,#e6ebf1 90%);
     border-color: rgba(27,31,35,.35);
     background-position: -.5em;
-  }
-
-  svg#clouds {
-    position: fixed;
-    bottom: -160px;
-    left: -230px;
-    z-index: -10;
-    width: 1920px;
   }
 
   /* Nueva estructura con proporciones específicas */
