--- a/src/app/features/post/post-detail/post-detail.component.html
+++ b/src/app/features/post/post-detail/post-detail.component.html
@@ -27,19 +27,16 @@
       <div class="post-meta">
         <time class="post-date">{{ post.date | date:'fullDate' }}</time>
       </div>
-
-      <!-- Tags -->
+ 
       <div class="post-tags" *ngIf="post.tags && post.tags.length > 0">
         <span 
           *ngFor="let tag of post.tags" 
-          class="tag"
-          (click)="onTagClick(tag)">
+          class="tag">
           #{{ tag }}
         </span>
       </div>
     </header>
-
-    <!-- Contenido del post -->
+ 
     <div class="post-content">
       <app-markdown-renderer 
         [content]="post.content || ''">
