--- a/src/app/features/shared/components/markdown-renderer/markdown-renderer.component.html
+++ b/src/app/features/shared/components/markdown-renderer/markdown-renderer.component.html
@@ -1,3 +1,1 @@
-<div class="markdown-content">
-  <markdown [data]="content"></markdown>
-</div>
+<div class="markdown-content" [innerHTML]="sanitizedHtml"></div>
